# gupi

./: DONTREADME.txt  LICENSE  instructions.txt  pyproject.toml
gladeupi/code/: camel_to_snake.py  capitalize_words.py  char_count.py  most_common_word.py  strip_whitespace.py  to_lower.py  word_count.py
gladeupi/crypt/: __init__.py  atbash.py  base64_encode.py  crc32.py  otp.py  sha1.py
gladeupi/math/: area_circle.py  fibonacci.py  mean.py  mode.py  numth.py  pythagoras.py
gladeupi/music/: chord_major.py  detune.py  harmonics.py  interval.py  invert.py  ms_to_bpm.py  scale_minor.py
gladeupi/web/: dict_to_query.py  get_path.py  html_escape.py  query_to_dict.py  strip_tags.py  validate_email.py  xml_unescape.py
gupi/code/: __init__.py  indent_code.py  line_count.py  palindrome.py  remove_punctuation.py  unique_words.py
gupi/crypt/: base64_decode.py  caesar_cipher.py  hmac_sha256.py  md5.py  pbkdf2.py  random_key.py  rot13.py  vigenere.py  xor_cipher.py
gupi/math/: __init__.py  area_triangle.py  is_prime.py  lcm.py  median.py  ncr.py  npr.py  numth.py  stddev.py  variance.py
gupi/music/: __init__.py  bpm_to_ms.py  chord_minor.py  freq_to_midi.py  freq_to_note.py  midi_to_freq.py  note_to_freq.py  scale_major.py  transpose.py
gupi/web/: __init__.py  get_domain.py  html_unescape.py  is_url.py  json_pretty.py  slugify.py  url_decode.py  url_encode.py  xml_escape.py
